--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,14 @@ body, html {
 body {
 	height: 100%;
 
+	margin-top:60px;
+
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
 }
+
 
 .topbar {
 	opacity: .5;
