--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,15 @@ body, html {
 
 body {
 	height: 100%;
-
-	margin-top:60px;
-
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+}
+
+.content-wrapper {
+    padding-top: 6em;
+    padding-bottom: 3em;
 }
 
 
@@ -49,7 +51,6 @@ body {
 	height: 315px;
 	width: 50%;
 	float: left;
-	/*padding-right: 15px;*/
 	margin-right: 15px;
 	position: relative;
 }
@@ -64,10 +65,6 @@ body {
 	background-image: url("/assets/images/demo.png");
 	background-position: center;
 	background-size: contain;
-	-webkit-background-size: contain;
-	-moz-background-size: contain;
-	-o-background-size: contain;
-	-webkit-transition: .2s;
 	transition: opacity .2s;
 }
 
@@ -82,14 +79,9 @@ body {
 
 .title-container {
 	position: relative;
-	margin-top: 10%;
+    border-radius: 5px;
 }
 
 .title-img {
-	height: 315px;
-	width: 315px;
-	float: left;
-	padding-right: 15px;
+    width: 100%;
 }
-
-
